exports[`Link should render its children 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Object {
      "$$typeof": Symbol(react.element),
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {
        "children": "Woop, hoop, poop."
      },
      "ref": null,
      "type": [Function Constructor]
    },
    "onPress": [Function foo]
  },
  "ref": null,
  "type": [Function Link]
}
`;

exports[`Link should support style overriding 0`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "onPress": [Function foo],
    "style": Object {
      "fontSize": 23
    }
  },
  "ref": null,
  "type": [Function Link]
}
`;
